--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,17 @@
     <title>start-up project</title>
   </head>
   <body>
-    <p>Hello</p>
+    <header>
+      <div class="top">
+        <img src="assets/img/logo.svg" alt="">
+        <img class="menu" src="assets/img/menu.svg" alt="">
+      </div>
+      <div class="bottom">
+        <p>Contact Us</p>
+        <p>Membership</p>
+        <p>Amenities</p>
+      </div>
+    </header>
 
   </body>
 </html>
