add menu dropdown in js

--- a/src/index.html
+++ b/src/index.html
@@ -10,12 +10,17 @@
     <header>
       <div class="top">
         <img src="assets/img/logo.svg" alt="">
-        <img class="menu" src="assets/img/menu.svg" alt="">
+        <div id="menu">
+          <img src="assets/img/menu.svg" alt="">
+        </div>
+
       </div>
       <div class="bottom">
-        <p>Contact Us</p>
-        <p>Membership</p>
-        <p>Amenities</p>
+        <div class="pages">
+          <p>Contact Us</p>
+          <p>Membership</p>
+          <p>Amenities</p>
+        </div>
       </div>
     </header>
 
