full size header

--- a/src/index.html
+++ b/src/index.html
@@ -10,16 +10,22 @@
     <header>
       <div class="top">
         <img src="assets/img/logo.svg" alt="">
+        <div class="pagesfull">
+          <a>Contact Us</a>
+          <a>|</a>
+          <a>Membership</a>
+          <a>|</a>
+          <a>Amenities</a>
+        </div>
         <div id="menu">
           <img src="assets/img/menu.svg" alt="">
         </div>
-
       </div>
       <div class="bottom">
         <div class="pages">
-          <p>Contact Us</p>
-          <p>Membership</p>
-          <p>Amenities</p>
+          <a>Contact Us</a>
+          <a>Membership</a>
+          <a>Amenities</a>
         </div>
       </div>
     </header>
