add contact pg and link to contact pg

--- a/src/index.html
+++ b/src/index.html
@@ -11,11 +11,11 @@
       <div class="top">
         <img src="assets/img/logo.svg" alt="">
         <div class="pagesfull">
-          <a>Contact Us</a>
+          <a href="">Contact Us</a>
           <a>|</a>
-          <a>Membership</a>
+          <a href="">Membership</a>
           <a>|</a>
-          <a>Amenities</a>
+          <a href="">Amenities</a>
         </div>
         <div id="menu">
           <img src="assets/img/menu.svg" alt="">
@@ -23,12 +23,11 @@
       </div>
       <div class="bottom">
         <div class="pages">
-          <a>Contact Us</a>
-          <a>Membership</a>
-          <a>Amenities</a>
+          <a href="contact.html">Contact Us</a>
+          <a href="">Membership</a>
+          <a href="">Amenities</a>
         </div>
       </div>
     </header>
-
   </body>
 </html>
