--- a/src/contact.html
+++ b/src/contact.html
@@ -1,10 +1,33 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
+<html>
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
+    <script type="text/javascript" src="main.js"></script>
+    <title>start-up project</title>
   </head>
   <body>
-
+    <header>
+      <div class="top">
+        <img src="assets/img/logo.svg" alt="">
+        <div class="pagesfull">
+          <a href="">Contact Us</a>
+          <a>|</a>
+          <a href="">Membership</a>
+          <a>|</a>
+          <a href="">Amenities</a>
+        </div>
+        <div id="menu">
+          <img src="assets/img/menu.svg" alt="">
+        </div>
+      </div>
+      <div class="bottom">
+        <div class="pages">
+          <a href="contact.html">Contact Us</a>
+          <a href="">Membership</a>
+          <a href="">Amenities</a>
+        </div>
+      </div>
+    </header>
   </body>
 </html>
