--- a/src/index.html
+++ b/src/index.html
@@ -29,5 +29,19 @@
         </div>
       </div>
     </header>
+    <section>
+      <div class="grid-container">
+        <div class="grid-item">
+          <img src="" alt="">
+        </div>
+        <div class="grid-item">
+          <p>A workplace for you</p>
+          <img src="" alt="">
+        </div>
+        <div class="grid-item">
+
+        </div>
+      </div>
+    </section>
   </body>
 </html>
