add grid to landing page

--- a/src/index.html
+++ b/src/index.html
@@ -32,14 +32,16 @@
     <section>
       <div class="grid-container">
         <div class="grid-item">
-          <img src="" alt="">
+          <img src="assets/img/grid1.png" alt="">
         </div>
         <div class="grid-item">
-          <p>A workplace for you</p>
-          <img src="" alt="">
+          <h1>A workplace for you</h1>
+          <img src="assets/img/grid2.png" alt="">
         </div>
         <div class="grid-item">
-
+          <h1>Community</h1>
+          <p>A place for artists, daytraders, craftspeople, writers, counselors, more traditional business people, anyone and everyone, to come together.</p>
+          <img src="assets/img/grid3.png" alt="">
         </div>
       </div>
     </section>
