--- a/src/index.html
+++ b/src/index.html
@@ -31,16 +31,18 @@
     </header>
     <section>
       <div class="grid-container">
-        <div class="grid-item">
+        <div class="grid-item gi1">
           <img src="assets/img/grid1.png" alt="">
         </div>
-        <div class="grid-item">
+        <div class="grid-item gi2">
           <h1>A workplace for you</h1>
           <img src="assets/img/grid2.png" alt="">
         </div>
-        <div class="grid-item">
-          <h1>Community</h1>
-          <p>A place for artists, daytraders, craftspeople, writers, counselors, more traditional business people, anyone and everyone, to come together.</p>
+        <div class="grid-item gi3">
+          <div class="">
+            <h1>Community</h1>
+            <p>A place for artists, daytraders, craftspeople, writers, counselors, more traditional business people, anyone and everyone, to come together.</p>
+          </div>
           <img src="assets/img/grid3.png" alt="">
         </div>
       </div>
