add working grid layout

--- a/src/contact.html
+++ b/src/contact.html
@@ -9,9 +9,9 @@
   <body>
     <header>
       <div class="top">
-        <img src="assets/img/logo.svg" alt="">
+        <a href="index.html"><img src="assets/img/logo.svg" alt=""></a>
         <div class="pagesfull">
-          <a href="">Contact Us</a>
+          <a href="contact.html">Contact Us</a>
           <a>|</a>
           <a href="">Membership</a>
           <a>|</a>
