add grid to contact page

--- a/src/contact.html
+++ b/src/contact.html
@@ -30,5 +30,22 @@
       </div>
     </header>
 
+    <section>
+      <div class="grid-box">
+        <div class="box-item">
+          <h1>Have any questions? Contact us!</h1>
+          <p>Phone: 1-800-888-8888</p>
+          <p>Email: cowork@cowork.com</p>
+        </div>
+        <div class="box-item">
+          <h1>Or visit us sometime at:</h1>
+          <p>1234 sw corner st</p>
+        </div>
+        <div class="box-item">
+          <img src="assets/img/box.png" alt="">
+        </div>
+      </div>
+    </section>
+
   </body>
 </html>
