--- a/src/contact.html
+++ b/src/contact.html
@@ -32,16 +32,16 @@
 
     <section>
       <div class="grid-box">
-        <div class="box-item">
+        <div class="box-item b1">
           <h1>Have any questions? Contact us!</h1>
           <p>Phone: 1-800-888-8888</p>
           <p>Email: cowork@cowork.com</p>
         </div>
-        <div class="box-item">
+        <div class="box-item b2">
           <h1>Or visit us sometime at:</h1>
           <p>1234 sw corner st</p>
         </div>
-        <div class="box-item">
+        <div class="box-item b3">
           <img src="assets/img/box.png" alt="">
         </div>
       </div>
