add mobile amenities pg

--- a/src/contact.html
+++ b/src/contact.html
@@ -13,9 +13,9 @@
         <div class="pagesfull">
           <a href="contact.html">Contact Us</a>
           <a>|</a>
-          <a href="">Membership</a>
+          <a href="member.html">Membership</a>
           <a>|</a>
-          <a href="">Amenities</a>
+          <a href="amenities.html">Amenities</a>
         </div>
         <div id="menu">
           <img src="assets/img/menu.svg" alt="">
@@ -24,8 +24,8 @@
       <div class="bottom">
         <div class="pages">
           <a href="contact.html">Contact Us</a>
-          <a href="">Membership</a>
-          <a href="">Amenities</a>
+          <a href="member.html">Membership</a>
+          <a href="amenities.html">Amenities</a>
         </div>
       </div>
     </header>
@@ -46,6 +46,5 @@
         </div>
       </div>
     </section>
-
   </body>
 </html>
