--- a/src/amenities.html
+++ b/src/amenities.html
@@ -29,23 +29,15 @@
         </div>
       </div>
     </header>
-    <section>
-      <div class="grid-container">
-        <div class="grid-item gi1">
-          <img src="assets/img/grid1.png" alt="">
-        </div>
-        <div class="grid-item gi2">
-          <h1>A workplace for you</h1>
-          <img src="assets/img/grid2.png" alt="">
-        </div>
-        <div class="grid-item gi3">
-          <div class="">
-            <h1>Community</h1>
-            <p>A place for artists, daytraders, craftspeople, writers, counselors, more traditional business people, anyone and everyone, to come together.</p>
-          </div>
-          <img src="assets/img/grid3.png" alt="">
-        </div>
+
+    <section class="amen-body">
+      <h1>Local, Funky, Fun</h1>
+      <div class="amen-p">
+        <p>We have an on-site coffee counter, both communal working areas and private offices, high-speed internet, printing/faxing services, and we usually have a fun, optional activity on Thursday afternoons. Like yoga, a fun complementary food, sometimes even crafts (come make your own mini desktop terrarium).</p>
       </div>
+      <img src="assets/img/amen.png" alt="">
+
     </section>
+
   </body>
 </html>
