add member page mobile

--- a/src/member.html
+++ b/src/member.html
@@ -29,6 +29,12 @@
         </div>
       </div>
     </header>
-
+    <section class="member-pg">
+      <p>Want to work here? Become a member!</p>
+      <img src="assets/img/mem1.png" alt="">
+      <p>$500 a month or save and pay $5000 a year</p>
+      <img src="assets/img/mem2.png" alt="">
+      <p>Already a member? Manage membership here</p>
+    </section>
   </body>
 </html>
