--- a/src/member.html
+++ b/src/member.html
@@ -30,11 +30,11 @@
       </div>
     </header>
     <section class="member-pg">
-      <p>Want to work here? Become a member!</p>
+      <h1>Want to work here? Become a member!</h1>
       <img src="assets/img/mem1.png" alt="">
-      <p>$500 a month or save and pay $5000 a year</p>
+      <h1>$500 a month or save and pay $5000 a year</h1>
       <img src="assets/img/mem2.png" alt="">
-      <p>Already a member? Manage membership here</p>
+      <h1>Already a member? Manage membership here</h1>
     </section>
   </body>
 </html>
